# LearnOpenGL

app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/assimp/: config.h  defs.h  material.h  mesh.h  scene.h  types.h
app/src/main/cpp/include/freetype/: freetype.h  ftlogging.h  fttypes.h
app/src/main/cpp/jni/: native-lib.cpp
app/src/main/cpp/render/: MyGLRender.cpp  MyGLRender.h  SampleFactory.h
app/src/main/cpp/sample/: Camera.cpp  Camera.h  CameraAutoMove.cpp  CameraAutoMove.h  CoordinateSystems.cpp  CoordinateSystems.h  GLBaseSample.h  NativeTransform.cpp  NativeTransform.h  Transform.cpp  Transform.h
app/src/main/cpp/sample/3_mesh/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoading.cpp  ModelLoading.h
app/src/main/cpp/sample/7_text_rendering/: text_rendering.cpp  text_rendering.h
app/src/main/cpp/sample/8_debugging/: debugging.cpp  debugging.h
app/src/main/cpp/sample/9_break_out/: BallObject.cpp  BallObject.h  Breakout.cpp  Breakout.h  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h  ParticleGenerator.cpp  ParticleGenerator.h  PostProcessor.cpp  PostProcessor.h  PowerUp.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
app/src/main/cpp/sample/advanced_light/: AdvancedLighting.cpp  AdvancedLighting.h
app/src/main/cpp/sample/advanced_opengl/: AdvancedUbo.cpp  AdvancedUbo.h
app/src/main/cpp/sample/blending_discard/: BlendingDiscard.cpp  BlendingDiscard.h
app/src/main/cpp/sample/cube_maps/: CubeMaps.cpp  CubeMaps.h  CubeMapsReflection.cpp  CubeMapsReflection.h  CubeMapsRefraction.cpp  ReflectionMode.cpp
app/src/main/cpp/sample/cull_face/: CullFace.cpp
app/src/main/cpp/sample/depth_testing/: DepthTesting.cpp
app/src/main/cpp/sample/frame_buffer/: FrameBuffers.h
app/src/main/cpp/sample/geometry_shader/: GeometryShaderPoint.cpp  GeometryShaderPoint.h
app/src/main/cpp/sample/instancing/: Asteroids.h  Instancing.cpp  Instancing.h
app/src/main/cpp/sample/light/: ColorsAtView.cpp  ColorsAtView.h  ColorsLight.cpp  ColorsLight.h  LightCastersDirectional.cpp  LightCastersDirectional.h  Material.cpp  Material.h  lighting_maps_diffuse.cpp  lighting_maps_diffuse.h  multiple_lights.cpp  multiple_lights.h
app/src/main/cpp/sample/mesh/: Mesh.cpp  Model.cpp  Model.h  ModelLoading.cpp  ModelLoading.h
app/src/main/cpp/sample/stencil_testing/: StencilTesting.cpp  StencilTesting.h
app/src/main/cpp/sample/transform/: Camera.cpp  CameraAutoMove.cpp  CameraAutoMove.h  CoordinateSystems.cpp  Transform.cpp  Transform.h
app/src/main/cpp/sample/triangle/: NativeRectangle.cpp  NativeRectangle.h  NativeTrangle6.h  NativeTriangle.cpp  NativeTriangle.h  NativeTriangle2.cpp  NativeTriangle2.h  NativeTriangle3.cpp  NativeTriangle3.h  NativeTriangle4.cpp  NativeTriangle4.h  NativeTriangle5.cpp  NativeTriangle5.h  NativeTriangle6.cpp  NativeTriangle6.h  NativeTriangle7.cpp  NativeTriangle7.h
app/src/main/cpp/utils/: Audio.cpp  Audio.h  CameraUtils.h  GLUtils.cpp  GLUtils.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
(+360 files in other folders)
